# embrapa-parser-fastapi

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: c04ccb59bfc5_added_account_table.py
src/: load_fixtures.py
src/api/: api.py
src/api/routers/: embrapa.py
src/crud/models/: embrapa.py
src/crud/repository/: __init__.py  base.py  embrapa_repository.py
src/crud/schemas/: base.py  embrapa_schema.py  import_schema.py
src/fixtures/: TypeExport.json  TypeImport.json  TypeProcess.json
src/infra/: container.py  settings.py
src/schedules/: embrapa_schedule.py
src/services/: __init__.py  base.py  embrapa_service.py  schedule_task_service.py
src/utils/: schema.py
